# ruki

./: CMakeLists.txt  README.md  test.cpp
something/: t.cpp
sources/re2-2023-09-01/: CMakeLists.txt
